--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
             <div class="background-custom-1 bg-default"></div>
         </section>
         <!-- Our Team-->
-        <section class="section section-full section-sm bg-default text-md-center" id="team">
+        <!-- <section class="section section-full section-sm bg-default text-md-center" id="team">
             <div class="container">
                 <div class="subtitle-classic wow fadeInUp">Meet our team</div>
                 <h2><span class="d-inline-block wow fadeInLeft">People behind</span> <span class="text-primary d-inline-block wow fadeInRight">our success</span>
@@ -288,9 +288,9 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!-- Clients-->
-        <section class="section section-full section-xl bg-gray-100 text-md-center" id="clients">
+        <!-- <section class="section section-full section-xl bg-gray-100 text-md-center" id="clients">
             <div class="container">
                 <div class="subtitle-classic wow fadeInUp">Our clients and partners</div>
                 <h2><span class="d-inline-block wow fadeInLeft">Happy</span> <span class="d-inline-block wow fadeInRight">clients</span>
@@ -306,9 +306,9 @@
                     <div class="col-6 col-sm-4 col-md-3"><a class="clients-classic wow slideInRight" href="#"><img src="images/clients-8-160x110.png" alt="" width="160" height="110"/></a></div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!-- Portfolio-->
-        <section class="section section-full section-xs section-first bg-default text-md-center" id="projects">
+        <!-- <section class="section section-full section-xs section-first bg-default text-md-center" id="projects">
             <div class="container">
                 <div class="subtitle-classic wow fadeInUp">Portfolio</div>
                 <h2><span class="d-inline-block wow fadeInLeft">Our featured</span> <span class="text-primary d-inline-block wow fadeInRight">projects</span>
@@ -376,9 +376,9 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!-- Blog-->
-        <section class="section section-full section-xs section-last bg-default text-md-center" id="news">
+        <!-- <section class="section section-full section-xs section-last bg-default text-md-center" id="news">
             <div class="container">
                 <div class="subtitle-classic wow fadeInUp">Recent posts</div>
                 <h2><span class="d-inline-block wow fadeInLeft">Latest news</span> <span class="d-inline-block wow fadeInRight">& updates</span>
@@ -416,7 +416,7 @@
                     </div>
                 </div><a class="button button-default" href="blog-post.html">More news</a>
             </div>
-        </section>
+        </section> -->
         <!-- Page Footer-->
         <footer class="section footer-classic section-full section-full-1 section-sm section-inset-2 bg-gray-3 context-dark text-md-center" id="contacts">
             <div class="container">
@@ -451,7 +451,7 @@
                         <li><a class="icon fa fa-instagram" href="#"></a></li>
                     </ul>
                 </div>
-                <p class="rights wow fadeInUp"><span>&copy;&nbsp; </span><span class="copyright-year"></span><span>&nbsp;</span><span>DePaletra</span><span>.&nbsp;</span><span>All rights reserved. Terms and Conditions</span><br/><a href="privacy-policy.html">Privacy Policy</a></p>
+                <p class="rights wow fadeInUp"><span>&copy;&nbsp; </span><span>&nbsp;</span><span> 2020 Felicity Web Dev Team</span><span>.&nbsp;</span><span>All rights reserved. Terms and Conditions</span><br/><a href="privacy-policy.html">Privacy Policy</a></p>
             </div>
         </footer>
     </div>
@@ -459,39 +459,5 @@
     <script src="js/core.min.js"></script>
     <script src="js/script.js"></script>
 
-    <!--LIVEDEMO_00 -->
-
-    <script type="text/javascript">
-        var _gaq = _gaq || [];
-        _gaq.push(['_setAccount', 'UA-7078796-5']);
-        _gaq.push(['_trackPageview']);
-        (function() {
-            var ga = document.createElement('script');
-            ga.type = 'text/javascript';
-            ga.async = true;
-            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'https://www') + '.google-analytics.com/ga.js';
-            var s = document.getElementsByTagName('script')[0];
-            s.parentNode.insertBefore(ga, s);
-        })();
-    </script>
-
 </body>
-<!-- Google Tag Manager --><noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-P9FT69"height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<script>
-    (function(w, d, s, l, i) {
-        w[l] = w[l] || [];
-        w[l].push({
-            'gtm.start': new Date().getTime(),
-            event: 'gtm.js'
-        });
-        var f = d.getElementsByTagName(s)[0],
-            j = d.createElement(s),
-            dl = l != 'dataLayer' ? '&l=' + l : '';
-        j.async = true;
-        j.src = '//www.googletagmanager.com/gtm.js?id=' + i + dl;
-        f.parentNode.insertBefore(j, f);
-    })(window, document, 'script', 'dataLayer', 'GTM-P9FT69');
-</script>
-<!-- End Google Tag Manager -->
-
 </html>
